--- a/countyDemo.html
+++ b/countyDemo.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <html>
   <body>
-    <h1></h1>
-    <p></p>
+    <h1>The Select Element</h1>
+    <p>The select element defines a drop-down list:</p>
     <form action="/action_page.php">
       <select name= "state">
         {{ options }}
